Fix checkbox wrapping and padding

--- a/docs/playground/playground.css
+++ b/docs/playground/playground.css
@@ -271,6 +271,10 @@ body details {
     width: 50%;
   }
 
+  #jsonpath label {
+    padding-right: 8px;
+  }
+
   #output {
     flex-direction: column;
     width: 50%;
